--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
-button {
-}
-
 .counter-component {
   background-color: antiquewhite;
   padding: 10px 30px;
   width: fit-content;
+  border: #9f9f9f solid 2px;
+  border-radius: 10px;
+  margin: 10px 0;
+}
+
+#number-label {
+  width: 120px;
+}
+
+.control {
+  margin: 5px;
 }
