--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.counters-main-container {
+  background-color: lightgray;
+  padding: 10px 30px;
+  width: fit-content;
+  border: darkgray solid 2px;
+  border-radius: 10px;
+  margin: 10px 10px;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
 .counter-container {
   background-color: antiquewhite;
   padding: 10px 30px;
@@ -10,14 +22,13 @@
 .tag-list-container {
   background-color: lightgreen;
   padding: 10px 30px;
-  width: fit-content;
+  height: 120px;
   border: #9f9f9f solid 2px;
   border-radius: 10px;
-  margin: 10px 0;
+  margin: 10px 10px;
   position: fixed;
-  top: 0;
+  bottom: 0;
   right: 0;
-
 }
 
 #number-label {
